--- a/work14-1/index-1.css
+++ b/work14-1/index-1.css
@@ -1,8 +1,7 @@
- 
 .box{
-    margin: 0 auto;
+    margin:0 auto;
     position: relative;
-    background: url(ms.jpg);
+    background:url(ms1.jpg);
     background-size: cover;
     width: 702px;
     height: 378px;
@@ -10,14 +9,14 @@
 
 .box div{
     float: left;
-    width: 50px;
-    height: 50px;
+    width:50px;
+    height:50px;
     border: 1px solid #ccc;
-    margin-left: 5px;
-    line-height: 50px;
+    margin-left:5px;
+    line-height:50px;
     text-align: center;
     color: red;
-    position: relative;
-    top: 328px;
-    left: 350px;
+    position:relative;
+    top:330px;
+    left:350px;
 }
