--- a/work14/index1.css
+++ b/work14/index1.css
@@ -1,36 +1,37 @@
+
 .box {
-    width:  250px;
-    height:  52px;
-    padding:  15px 30px;
-    border:  2px solid #cccccc;
-    border-radius:  16px;
-    margin:  0 auto;
+    width: 250px;
+    height: 52px;
+    padding: 15px 30px;
+    border: 2px solid #ccc;
+    border-radius: 16px;
+    margin: 0 auto;
 }
 
 .box .count {
     width: 60px;
-    color: #666666;
+    color: #666;
     font-size: 280%;
-    line-height:  50px;
-    padding-left:  6px;
-    margin-left:  5px;
-    border:  1px solid #ffffff;
+    line-height: 50px;
+    padding-left: 6px;
+    margin-left: 5px;
+    border: 1px solid #fff;
 }
 
 .box div {
-    margin-left:  5px;
+    margin-left: 5px;
     float: left;
-    width:  50px;
-    height:  50px;
-    border-radius:  50px;
-    border:  1px solid #666666;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    border: 1px solid #666;
 }
 
 .gray {
-    background-color: #eeeeee;
+    background-color: #eee;
 }
 
-.red{
+.red {
     background-color: red;
 }
 
